// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile bf huge 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#F5F5F5",
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 20,
      "marginVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 20,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <ArticleLabel
          color="#005B8D"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 35,
            "fontWeight": "normal",
            "includeFontPadding": false,
            "lineHeight": 35,
            "marginBottom": 10,
          }
        }
      >
        This is tile headline
      </Text>
      <ArticleFlags
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
        "paddingLeft": 10,
      }
    }
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </View>
</Link>
`;

exports[`tile bf medium 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#F5F5F5",
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "marginVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 15,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <ArticleLabel
          color="#005B8D"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 25,
            "fontWeight": "normal",
            "includeFontPadding": false,
            "lineHeight": 25,
            "marginBottom": 10,
          }
        }
      >
        This is tile headline
      </Text>
      <ArticleFlags
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
        "paddingLeft": 10,
      }
    }
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </View>
</Link>
`;

exports[`tile bf wide 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#F5F5F5",
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 20,
      "marginVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 15,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <ArticleLabel
          color="#005B8D"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 32,
            "fontWeight": "normal",
            "includeFontPadding": false,
            "lineHeight": 32,
            "marginBottom": 10,
          }
        }
      >
        This is tile headline
      </Text>
      <ArticleFlags
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
        "paddingLeft": 10,
      }
    }
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </View>
</Link>
`;

exports[`tile bf without breakpoint should be like medium 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#F5F5F5",
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "marginVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 15,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <ArticleLabel
          color="#005B8D"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 25,
            "fontWeight": "normal",
            "includeFontPadding": false,
            "lineHeight": 25,
            "marginBottom": 10,
          }
        }
      >
        This is tile headline
      </Text>
      <ArticleFlags
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
        "paddingLeft": 10,
      }
    }
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </View>
</Link>
`;
